Add form to take user input

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
-    Hello World
+    <form action="">
+      <label for="search">Enter City Name</label>
+      <input type="text" name="search" id="search" placeholder="Rome" />
+      <button type="button">Search</button>
+    </form>
   </body>
 </html>
