Create function to render weather in DOM

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,11 @@
       <input type="text" name="search" id="search" placeholder="Rome" />
       <button type="button">Search</button>
     </form>
+
+    <div class="main-weather"></div>
+    <div class="side-weather"></div>
+    <div class="address"></div>
+    <div class="hourly-weather"></div>
+    <div class="ten-days-weather"></div>
   </body>
 </html>
