Add main and side weather doms

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,19 @@
       <button type="button">Search</button>
     </form>
 
-    <div class="main-weather"></div>
-    <div class="side-weather"></div>
+    <div class="main-weather">
+      <div class="temp"></div>
+      <div class="max"></div>
+      <div class="min"></div>
+      <div class="icon"></div>
+      <div class="feels-like"></div>
+    </div>
+    <div class="side-weather">
+      <div class="humidity"></div>
+      <div class="precipitation"></div>
+      <div class="windspeed"></div>
+      <div class="uv-index"></div>
+    </div>
     <div class="address"></div>
     <div class="hourly-weather"></div>
     <div class="ten-days-weather"></div>
