Add address dom

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,13 @@
       <div class="windspeed"></div>
       <div class="uv-index"></div>
     </div>
-    <div class="address"></div>
+    <div class="address">
+      <div class="resolved-address"></div>
+      <div class="coord">
+        <div class="lat"></div>
+        <div class="long"></div>
+      </div>
+    </div>
     <div class="hourly-weather"></div>
     <div class="ten-days-weather"></div>
   </body>
