Create hourly weather doms

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <div class="long"></div>
       </div>
     </div>
-    <div class="hourly-weather"></div>
+    <div class="hourly"></div>
     <div class="ten-days-weather"></div>
   </body>
 </html>
