--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,6 @@
       </div>
     </div>
     <div class="hourly"></div>
-    <div class="ten-days-weather"></div>
+    <div class="ten-days"></div>
   </body>
 </html>
