Add icons for weathers

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <div class="temp"></div>
       <div class="max"></div>
       <div class="min"></div>
-      <div class="icon"></div>
+      <img class="icon" />
       <div class="feels-like"></div>
     </div>
     <div class="side-weather">
