--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
       <div class="temp"></div>
       <div class="max"></div>
       <div class="min"></div>
-      <img class="icon" />
+      <div class="icon-holder">
+        <img class="icon" />
+      </div>
       <div class="feels-like"></div>
     </div>
     <div class="side-weather">
