Finish main weather style

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,25 @@
     </form>
 
     <div class="main-weather">
-      <div class="temp"></div>
-      <div class="max"></div>
-      <div class="min"></div>
+      <div class="temp">
+        <div class="condition"></div>
+        <div class="degrees"></div>
+      </div>
+      <div class="max">
+        <div class="text">Max:</div>
+        <div class="degrees"></div>
+      </div>
+      <div class="min">
+        <div class="text">Min:</div>
+        <div class="degrees"></div>
+      </div>
       <div class="icon-holder">
         <img class="icon" />
       </div>
-      <div class="feels-like"></div>
+      <div class="feels-like">
+        <div class="text">Feels like:</div>
+        <div class="degrees"></div>
+      </div>
     </div>
     <div class="side-weather">
       <div class="humidity"></div>
