Style side weather

--- a/src/index.html
+++ b/src/index.html
@@ -35,10 +35,22 @@
       </div>
     </div>
     <div class="side-weather">
-      <div class="humidity"></div>
-      <div class="precipitation"></div>
-      <div class="windspeed"></div>
-      <div class="uv-index"></div>
+      <div class="humidity">
+        <div class="text">Humidity:</div>
+        <div class="val"></div>
+      </div>
+      <div class="precipitation">
+        <div class="text">Rain:</div>
+        <div class="val"></div>
+      </div>
+      <div class="windspeed">
+        <div class="text">Wind Speed:</div>
+        <div class="val"></div>
+      </div>
+      <div class="uv-index">
+        <div class="text">UV Index:</div>
+        <div class="val"></div>
+      </div>
     </div>
     <div class="address">
       <div class="resolved-address"></div>
